# polarity-engine

./: pyproject.toml
.github/workflows/: ci.yml
src/: config.py  fetch_data.py  parsers.py
tests/: mock_data.py  test_fetch_data.py  test_parsers.py
